Adding new API
