# src/main/resources/openapi/spec.yml
@@ -8,6 +8,10 @@ servers:
 tags:
   - name: Person
     description: Api generates data for person
+  - name: Member
+    description: Api generates data for member
+  - name: Role
+    description: Api generates data for role
 paths:
   /v1/people/males:
     get:
@@ -57,6 +61,26 @@ paths:
                 type: object
                 items:
                   $ref: "#/components/schemas/PersonDTO"
+  /v1/members/save:
+    post:
+      tags:
+        - Member
+      operationId: saveMember
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/MemberDTO"
+      responses:
+        '200':
+          description: ok
+          content:
+            application/json:
+              schema:
+                type: object
+                items:
+                  $ref: "#/components/schemas/MemberDTO"
 components:
   schemas:
     AddressDTO:
@@ -93,3 +117,35 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/AddressDTO'
+        anniversaryDate:
+          type: string
+          format: date
+    RoleDTO:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        roleValue:
+          type: string
+          enum:
+            - PASTOR
+            - ELDER
+            - DEACON
+    MemberDTO:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        membershipDate:
+          type: string
+        roles:
+          type: array
+          items:
+            $ref: "#/components/schemas/RoleDTO"
+        status:
+          type: string
+          enum:
+            - ACTIVE
+            - DELETED
